src/test/resources/stanzas/iq/pubsub/subscribe/foreign/fail/notonwhitelist/infoReply1.stanza
<iq id="items1" 
    type="result" 
    to="comptest.xmpp.lobstermonster.org" 
    from="buddycloud.highfellow.org">
   <query xmlns="http://jabber.org/protocol/disco#info">
      <identity type="service" name="XEP-0060 service" category="pubsub"/>
      <identity type="channels" name="Channels service" category="pubsub"/>
      <identity type="inbox" name="Channels inbox service" category="pubsub"/>
      <feature var="http://jabber.org/protocol/disco#info"/>
      <feature var="http://jabber.org/protocol/disco#items"/>
      <feature var="jabber:iq:register"/>
      <feature var="http://jabber.org/protocol/pubsub"/>
      <feature var="http://jabber.org/protocol/pubsub#owner"/>
   </query>
</iq>